--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -29,7 +29,7 @@
   <string id="401">Misc</string>
   <string id="411">Enable initial flash</string>
   <string id="412">Disable for short movies</string>
-  <string id="416">Short movie length</string>
+  <string id="416">Short movie length (minutes)</string>
 
   <string id="500">Advanced settings</string>
   <string id="510">Changes will be active after restarting XBMC</string>
